--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>Miranda 2111017 Teknik Komputer</h1>
+<!DOCTYPE html>
+<html lang="id" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Miranda</title>
+  </head>
+  <body>
+  <h1>pratikum pengolahan citra 08-02-2025 </h1>
+  <ul>
+    <li>Miranda</li>
+    <li>2111017</li>
+    <<li>Teknik Komputer</li>
+  </ul>
+  <img src="wallpaper.jpg" alt="">
+  </body>
+</html>
