--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <ul>
     <li>Miranda</li>
     <li>2111017</li>
-    <<li>Teknik Komputer</li>
+    <li>Teknik Komputer</li>
   </ul>
   <img src="wallpaper.jpg" alt="">
   </body>
