--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Miranda</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io(mir)/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io(mir)/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io(mir)/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io(mir)/site.webmanifest">
   </head>
   <body>
   <h1>pratikum pengolahan citra 08-02-2025 </h1>
