--- a/index.html
+++ b/index.html
@@ -40,5 +40,8 @@
     <li>Teknik Komputer</li>
   </ul>
   <img src="wallpaper.jpg" alt="">
+    <ul>
+    <img src="hasil.jpg" alt="">
+  </ul>
   </body>
 </html>
