--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <li>2111017</li>
     <li>Teknik Komputer</li>
   </ul>
-  <img src="wallpaper.jpg" alt="">
-  
-    <img src="hasil.jpg" alt="">
-  
+    <center>
+  <img src="wallpaper.jpg" alt="" with="50" height="50">
+    <img src="hasil.jpg" alt="" with="50" height="50">
+  </center>
   </body>
 </html>
