--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
   </ul>
     <center>
   <img src="wallpaper.jpg" alt="" with="50" height="50">
-    <img src="hasil.jpg" alt="" with="50" height="50">
+  <img src="hasil.jpg" alt="" with="50" height="50">
+  <img src="outsuthreshold.jpg" alt="" with="50" height="50">  
   </center>
   </body>
 </html>
