--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <li>Teknik Komputer</li>
   </ul>
     <center>
-  <img src="wallpaper.jpg" alt="" with="50" height="50">
-  <img src="hasil.jpg" alt="" with="50" height="50">
-  <img src="outsuthreshold.jpg" alt="" with="50" height="50">  
+  <img src="wallpaper.jpg" alt="" with="50%" height="50%">
+  <img src="hasil.jpg" alt="" with="50%" height="50%">
+  <img src="outsuthreshold.jpg" alt="" with="50%" height="50%">  
   </center>
   </body>
 </html>
