--- a/index.html
+++ b/index.html
@@ -43,7 +43,17 @@
  
     <img src="wallpaper.jpg" alt="" with="50%" height="50%">
     <img src="hasil.jpg" alt="" with="50%" height="50%">
-    <img src="outsuthreshold.jpg" alt="" with="50%" height="50%">  
+    <img src="outsuthreshold1.jpg" alt="" with="50%" height="50%"> 
+    <img src="originalimageadative.jpg" alt="" with="50%" height="50%">
+    <img src="invertImage.jpg" alt="" with="50%" height="50%">
+    <img src="gaussian-Blur-Image.jpg" alt="" with="50%" height="50%">  
+    <img src="adative-Threshold-meanC.jpg" alt="" with="50%" height="50%">  
+    <img src="adative-GausianC.jpg" alt="" with="50%" height="50%">  
+    <img src="watershed.jpg" alt="" with="50%" height="50%">
+    <img src="cannyEdge.jpg" alt="" with="50%" height="50%">
+    <img src="kMeansSegmen.jpg" alt="" with="50%" height="50%">
+    <img src="globaltreshold.jpg" alt="" with="50%" height="50%">
+    <img src="globaltreshold-grafik.jpg" alt="" with="50%" height="50%"> 
     </center>
   </body>
 </html>
